--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,4 +8,4 @@ en:
       long: "%a %b %d"
   person:
     update:
-      flash: "Thank you, we have successfully rescheduled"
+      flash: "Thank you!"
